# build_cfg

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
build_cfg/: Cargo.toml
build_cfg/src/: lib.rs
build_cfg_macros/: Cargo.toml
build_cfg_macros/src/: lib.rs
build_cfg_shared/: Cargo.toml
build_cfg_shared/src/: lib.rs
tests/: Cargo.toml
tests/src/: main.rs  tests.rs
