[package]
name = "build_cfg"
version = "0.1.0"
edition = "2018"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
repository = "https://github.com/WilliamVenner/build_cfg"
description = "Evaluate cfg() directives in build scripts"
categories = ["development-tools", "development-tools::ffi", "development-tools::build-utils"]
keywords = ["cfg", "build", "script", "macro"]

[dependencies.build_cfg_shared]
version = "0.1.0"
path = "../build_cfg_shared"

[dependencies.build_cfg_macros]
version = "0.1.0"
path = "../build_cfg_macros"
