[package]
name = "build_cfg_macros"
version = "0.1.0"
edition = "2018"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
repository = "https://github.com/WilliamVenner/build_cfg"

[lib]
proc-macro = true

[dependencies.build_cfg_shared]
version = "0.1.0"
path = "../build_cfg_shared"

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"